# keyline-planner

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
.learnings/: ERRORS.md  LEARNINGS.md
docs/architecture/: 01-introduction.md  02-constraints.md  03-context-scope.md  04-solution-strategy.md  05-building-blocks.md  08-crosscutting.md  09-decisions.md  10-quality.md  11-risks.md  12-glossary.md  README.md
src/keyline_planner/: __init__.py
src/keyline_planner/cli/: __init__.py  main.py
src/keyline_planner/engine/: __init__.py  cache.py  contours.py  geometry.py  models.py  pipeline.py  raster.py  tiles.py
tests/: conftest.py
tests/e2e/: conftest.py  test_cli.py  test_cli_network_smoke.py
tests/integration/: test_contours.py  test_pipeline.py  test_raster.py
tests/unit/: test_cache.py  test_contours.py  test_geometry.py  test_models.py  test_tiles.py
