[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keyline-planner"
version = "0.1.0"
description = "CLI-first Swiss keyline-design contour generation engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "dothackerman" }]
keywords = ["gis", "contour", "keyline", "swisstopo", "dem"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "typer>=0.9,<1.0",
    "rich>=13.0",
    "rasterio>=1.3",
    "shapely>=2.0",
    "pyproj>=3.6",
    "pystac-client>=0.7",
    "requests>=2.31",
    "geojson>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-regressions>=2.5",
    "pytest-benchmark>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "pre-commit>=3.6",
]

[project.scripts]
keyline = "keyline_planner.cli.main:app"

[project.urls]
Repository = "https://github.com/dothackerman/keyline-planner"

# --- Tool Configuration ---

[tool.hatch.build.targets.wheel]
packages = ["src/keyline_planner"]

[tool.hatch.build.targets.sdist]
include = ["src/keyline_planner"]

[tool.ruff]
src = ["src"]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific rules
    "D",   # pydocstring
    "ANN", # flake8-annotations
]
ignore = [
    "D100",   # missing docstring in public module (allow thin modules)
    "D104",   # missing docstring in public package
    "ANN101", # missing type annotation for self
    "ANN102", # missing type annotation for cls
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["keyline_planner"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "rasterio.*",
    "osgeo.*",
    "pystac_client.*",
    "geojson.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-v",
]
markers = [
    "unit: Unit tests (fast, no I/O)",
    "integration: Integration tests (may use disk I/O)",
    "e2e: End-to-end CLI tests",
    "benchmark: Performance benchmark tests",
    "network: Tests requiring network access (skipped in CI by default)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:rasterio.*",
]

[tool.coverage.run]
source = ["keyline_planner"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
]
